--- a/.github/workflows/orchestrator.yml
+++ b/.github/workflows/orchestrator.yml
@@ -42,17 +42,17 @@ jobs:
     uses: ./.github/workflows/build-java.yml
     secrets: inherit # Passes secrets from on.workflow_call
 
-  build-dotnet:
-    name: "1. Build (.NET)"
-    if: inputs.pipeline_profile == '.Net'
-    uses: ./.github/workflows/build-dotnet.yml
-    secrets: inherit
+  # build-dotnet:
+  #   name: "1. Build (.NET)"
+  #   if: inputs.pipeline_profile == '.Net'
+  #   uses: ./.github/workflows/build-dotnet.yml
+  #   secrets: inherit
 
-  build-android:
-    name: "1. Build (Android)"
-    if: inputs.pipeline_profile == 'Android'
-    uses: ./.github/workflows/build-android.yml
-    secrets: inherit
+  # build-android:
+  #   name: "1. Build (Android)"
+  #   if: inputs.pipeline_profile == 'Android'
+  #   uses: ./.github/workflows/build-android.yml
+  #   secrets: inherit
 
   # ===================================================
   # STAGE 2: TEST
@@ -66,85 +66,85 @@ jobs:
     uses: ./.github/workflows/test-java.yml
     secrets: inherit
 
-  test-dotnet:
-    name: "2. Test (.NET)"
-    needs: [build-dotnet]
-    if: inputs.pipeline_profile == '.Net'
-    uses: ./.github/workflows/test-dotnet.yml
-    secrets: inherit
+  # test-dotnet:
+  #   name: "2. Test (.NET)"
+  #   needs: [build-dotnet]
+  #   if: inputs.pipeline_profile == '.Net'
+  #   uses: ./.github/workflows/test-dotnet.yml
+  #   secrets: inherit
   
   # (etc. for Android)
 
   # ===================================================
   # STAGE 3: SCAN
   # ===================================================
-  scan-java:
-    name: "3. Scan (Java)"
-    needs: [test-java] # Depends on the test job
-    permissions:
-      security-events: write # Required to upload SARIF results
-      contents: read
-    if: |
-      inputs.pipeline_profile == 'java-openshift' ||
-      inputs.pipeline_profile == 'java-middlewares'
-    uses: ./.github/workflows/scan-java.yml
-    with:
-      sonar-project-key: ${{ inputs.sonar-project-key }}
-      snyk-org-slug: ${{ inputs.snyk-org-slug }}
-    secrets:
-      # Pass only the specific secrets needed
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+  # scan-java:
+  #   name: "3. Scan (Java)"
+  #   needs: [test-java] # Depends on the test job
+  #   permissions:
+  #     security-events: write # Required to upload SARIF results
+  #     contents: read
+  #   if: |
+  #     inputs.pipeline_profile == 'java-openshift' ||
+  #     inputs.pipeline_profile == 'java-middlewares'
+  #   uses: ./.github/workflows/scan-java.yml
+  #   with:
+  #     sonar-project-key: ${{ inputs.sonar-project-key }}
+  #     snyk-org-slug: ${{ inputs.snyk-org-slug }}
+  #   secrets:
+  #     # Pass only the specific secrets needed
+  #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-  scan-dotnet:
-    name: "3. Scan (.NET)"
-    needs: [test-dotnet]
-    permissions:
-      security-events: write
-      contents: read
-    if: inputs.pipeline_profile == '.Net'
-    uses: ./.github/workflows/dotnet-scan.yml
-    # (pass inputs and secrets)
-    secrets: inherit
+  # scan-dotnet:
+  #   name: "3. Scan (.NET)"
+  #   needs: [test-dotnet]
+  #   permissions:
+  #     security-events: write
+  #     contents: read
+  #   if: inputs.pipeline_profile == '.Net'
+  #   uses: ./.github/workflows/dotnet-scan.yml
+  #   # (pass inputs and secrets)
+  #   secrets: inherit
 
   # ===================================================
   # STAGE 4: SIGN
   # ===================================================
-  sign:
-    name: "4. Sign Artifact"
-    # This job is a "fan-in" point. It runs after all
-    # relevant scan jobs have completed.
-    needs: [scan-java, scan-dotnet]
-    # 'if: always()' ensures this job runs to report failure,
-    # but 'needs' ensures it only proceeds if upstream jobs passed.
-    # A more robust check is 'if: success() || failure()'
-    if: success()
-    permissions:
-      id-token: write # Required for keyless signing
-      packages: write
-    uses: ./.github/workflows/sign-artifact.yml
-    with:
-      # You would need logic here to determine which artifact to sign,
-      # e.g., pass an image-ref from the build stage.
-      image-ref: 'ghcr.io/my-org/my-app:${{ github.sha }}'
-    secrets: inherit
+  # sign:
+  #   name: "4. Sign Artifact"
+  #   # This job is a "fan-in" point. It runs after all
+  #   # relevant scan jobs have completed.
+  #   needs: [scan-java, scan-dotnet]
+  #   # 'if: always()' ensures this job runs to report failure,
+  #   # but 'needs' ensures it only proceeds if upstream jobs passed.
+  #   # A more robust check is 'if: success() || failure()'
+  #   if: success()
+  #   permissions:
+  #     id-token: write # Required for keyless signing
+  #     packages: write
+  #   uses: ./.github/workflows/sign-artifact.yml
+  #   with:
+  #     # You would need logic here to determine which artifact to sign,
+  #     # e.g., pass an image-ref from the build stage.
+  #     image-ref: 'ghcr.io/my-org/my-app:${{ github.sha }}'
+  #   secrets: inherit
 
   # ===================================================
   # STAGE 5: DEPLOY
   # ===================================================
-  deploy-java-openshift:
-    name: "5. Deploy (Java OpenShift)"
-    needs: [sign] # Depends on the 'sign' stage
-    if: inputs.pipeline_profile == 'java-openshift'
-    uses: ./.github/workflows/deploy-java-openshift.yml
-    secrets:
-      OPENSHIFT_TOKEN: ${{ secrets.OPENSHIFT_TOKEN }}
+  # deploy-java-openshift:
+  #   name: "5. Deploy (Java OpenShift)"
+  #   needs: [sign] # Depends on the 'sign' stage
+  #   if: inputs.pipeline_profile == 'java-openshift'
+  #   uses: ./.github/workflows/deploy-java-openshift.yml
+  #   secrets:
+  #     OPENSHIFT_TOKEN: ${{ secrets.OPENSHIFT_TOKEN }}
 
-  deploy-middleware-nginx:
-    name: "5. Deploy (Nginx)"
-    needs: [sign]
-    if: inputs.pipeline_profile == 'middleware:Nginx'
-    uses: ./.github/workflows/deploy-middleware-nginx.yml
-    secrets: inherit # (e.g., SSH_KEY)
+  # deploy-middleware-nginx:
+  #   name: "5. Deploy (Nginx)"
+  #   needs: [sign]
+  #   if: inputs.pipeline_profile == 'middleware:Nginx'
+  #   uses: ./.github/workflows/deploy-middleware-nginx.yml
+  #   secrets: inherit # (e.g., SSH_KEY)
 
   # (etc. for all other deploy profiles)
